<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:windowBackground"
    tools:context=".Fragment.CashStatement">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E91E63"
            android:padding="8dp"
            android:text="@string/cash_statement"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cashStatementFromdate_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_border"
            android:gravity="center_vertical"
            android:hint="@string/from_date"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textColor="#171515"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cashStatementToDate_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_border"
            android:gravity="center_vertical"
            android:hint="@string/to_date"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textColor="#171515"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cashStatement_Btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_top_color"
            android:text="@string/statement"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/btncolor" />

    </LinearLayout>
</RelativeLayout>