<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.CurrencySetup"
    android:background="?android:windowBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/toptoolbarcolor"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/currency_setup"
                android:textColor="#252222"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:text="@string/currency"
                android:textColor="#252222"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/currencynam_sp"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/text_border" />
        </LinearLayout>

        <EditText
            android:id="@+id/cureencycode_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/text_border"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/currency_code"
            android:inputType="text"

            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/currencySymbol_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/text_border"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/currency_symbol"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:text="@string/use"
                android:textColor="#252222"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/curencyUse_sp"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/text_border" />
        </LinearLayout>

        <Button
            android:id="@+id/currencyUpdate_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_top_color"
            android:text="@string/save"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/btncolor" />

    </LinearLayout>
</RelativeLayout>