<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    tools:context=".Fragment.PinSetup">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/pinaccsessSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pincode_access"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/pincodepass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/text_border"
                android:ems="10"
                android:hint="@string/pin_code"
                android:inputType="numberPassword"
                android:paddingLeft="10dp"
                android:autofillHints=""
                android:paddingStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/pincodepassconfirm"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/text_border"
                android:ems="10"
                android:hint="@string/pin_code_confirm"
                android:inputType="numberPassword"
                android:paddingLeft="10dp"
                android:autofillHints=""
                android:paddingStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/pincodesetupbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setup" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>