<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.CashActivity"
    android:orientation="vertical"
    android:background="?android:windowBackground"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="#E91E63"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_cash_activity"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cashactivityDate_etv"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/text_border"
                    android:gravity="center_vertical"
                    android:hint="@string/select_date"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:textColor="#171515"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/type"
                    android:textColor="#252222"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/cashType_sp"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/text_border" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/cashAmount_et"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:background="@drawable/text_border"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/cashdesciption_et"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:background="@drawable/text_border"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:overScrollMode="ifContentScrolls"
                    android:padding="5dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cashactivityCleraBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_top_color"
                    android:text="@string/clear"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/bordercolor" />

                <Button
                    android:id="@+id/cashactivity_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_top_color"
                    android:text="@string/save"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/btncolor" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>